[gd_scene load_steps=9 format=3 uid="uid://c2701iq6kr7jy"]

[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/resources/themes/default.tres" id="1_ncc3j"]
[ext_resource type="Shader" path="res://scripts/shaders/BasicTile.gdshader" id="2_31ckm"]
[ext_resource type="Script" path="res://scripts/user_interface/options.gd" id="2_mjy7k"]
[ext_resource type="StyleBox" uid="uid://byr8amhnwal4k" path="res://assets/resources/themes/panel.tres" id="3_vagje"]
[ext_resource type="Texture2D" uid="uid://jm0eyvgqfr6s" path="res://assets/ui/toggle_button_on_normal.png" id="6_o1i1h"]
[ext_resource type="Texture2D" uid="uid://ba0e2tckss3e5" path="res://assets/ui/gear_icon.png" id="9_60lqh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lesux"]
bg_color = Color(0.52549, 0.682353, 0.521569, 0.454902)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_223lg"]
shader = ExtResource("2_31ckm")
shader_parameter/base_color = Color(0.25098, 0.184314, 0.105882, 1)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
theme = ExtResource("1_ncc3j")
script = ExtResource("2_mjy7k")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lesux")

[node name="Panel" type="Panel" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -250.0
offset_right = 275.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3_vagje")

[node name="MarginContainer" type="MarginContainer" parent="Background/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="Background/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 65
text = "Settings"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Background/Panel/MarginContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_223lg")
layout_mode = 2
texture = ExtResource("9_60lqh")
expand_mode = 2

[node name="Options" type="HBoxContainer" parent="Background/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Labels" type="VBoxContainer" parent="Background/Panel/MarginContainer/Options"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 3.7
theme_override_constants/separation = 20

[node name="MusicLabel" type="Label" parent="Background/Panel/MarginContainer/Options/Labels"]
layout_mode = 2
text = "Music"

[node name="SfxLabel" type="Label" parent="Background/Panel/MarginContainer/Options/Labels"]
layout_mode = 2
text = "Sfx"

[node name="TutorialLabel" type="Label" parent="Background/Panel/MarginContainer/Options/Labels"]
layout_mode = 2
text = "Tutorial"

[node name="Buttons" type="VBoxContainer" parent="Background/Panel/MarginContainer/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/separation = 20
alignment = 2

[node name="MusicBtn" type="TextureButton" parent="Background/Panel/MarginContainer/Options/Buttons"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("6_o1i1h")
texture_pressed = ExtResource("6_o1i1h")
texture_hover = ExtResource("6_o1i1h")

[node name="SfxBtn" type="TextureButton" parent="Background/Panel/MarginContainer/Options/Buttons"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("6_o1i1h")
texture_pressed = ExtResource("6_o1i1h")
texture_hover = ExtResource("6_o1i1h")

[node name="TutorialBtn" type="TextureButton" parent="Background/Panel/MarginContainer/Options/Buttons"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("6_o1i1h")
texture_pressed = ExtResource("6_o1i1h")
texture_hover = ExtResource("6_o1i1h")

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="toggled" from="Background/Panel/MarginContainer/Options/Buttons/MusicBtn" to="." method="_on_music_btn_toggled"]
[connection signal="toggled" from="Background/Panel/MarginContainer/Options/Buttons/SfxBtn" to="." method="_on_sfx_btn_toggled"]
[connection signal="toggled" from="Background/Panel/MarginContainer/Options/Buttons/TutorialBtn" to="." method="_on_tutorial_btn_toggled"]
